# Texnopark

algorithms/avl_tree/: CMakeLists.txt  main.cpp
algorithms/binary_tree/: CMakeLists.txt  main.cpp
algorithms/decart_tree/: CMakeLists.txt  main.cpp
algorithms/dz_1/: CMakeLists.txt  main.cpp
algorithms/dz_2/: CMakeLists.txt  DynamicArray.hpp  main.cpp
algorithms/dz_3/: .gitignore  CMakeLists.txt  main.cpp
algorithms/dz_3_2/: CMakeLists.txt  main.cpp
algorithms/dz_3_3/: ListGraph.cpp  ListGraph.hpp  main.cpp
algorithms/dz_4/: CMakeLists.txt  main.cpp
algorithms/dz_6/: CMakeLists.txt  main.cpp
algorithms/graph/: ArcGraph.cpp  ArcGraph.hpp  CMakeLists.txt  ListGraph.cpp  ListGraph.hpp  MatrixGraph.cpp  MatrixGraph.hpp  MatrixRPGraph.cpp  MatrixRPGraph.hpp  SetGraph.cpp  SetGraph.hpp  interface.hpp  main.cpp  test.cpp
algorithms/hash_table/: CMakeLists.txt  main.cpp  template.cpp
c_c++/boost_test/: CMakeLists.txt  main.cpp
c_c++/idz_1/: CMakeLists.txt  CMakeLists.txt.in  a.txt  blank.h  blank_array.h  blank_pack.h  main.c
c_c++/idz_1/include/: blank.h  blank_array.h  blank_pack.h
c_c++/idz_1/linters/: run.sh
c_c++/idz_1/src/: blank.c  blank_array.c  blank_pack.c  main.c
c_c++/idz_1/test/: test.cpp
c_c++/idz_2/: CMakeLists.txt
c_c++/idz_2/include/: object.h  top_multi.h  top_single.h  top_utils.h  user.h  utils.h
c_c++/idz_2/linters/: run.sh
c_c++/idz_2/src/: main.c  object.c  top_multi.c  top_single.c  top_utils.c  user.c  utils.c
c_c++/idz_2/test/: test.cpp
c_c++/untitled/: CMakeLists.txt  hello
c_c++/untitled/test/: hello.c
command-tools/: command-json  command.json
web/: .gitignore  docker-compose.yml  gen_data.py  manage.py  run.sh
web/answer/: models.py
web/answer/migrations/: 0001_initial.py
web/ask_melikyan/: settings.py  urls.py  wsgi.py
web/like/: models.py
web/like/migrations/: 0001_initial.py  0002_auto_20191105_1021.py  0003_auto_20191105_1023.py
web/question/: models.py  urls.py  views.py
web/question/management/commands/: gendata.py
web/question/migrations/: 0001_initial.py
web/static/: ask.css
web/tag/: models.py  urls.py  views.py
web/tag/migrations/: 0001_initial.py
web/template/: ask.html  hot.html  index.html  question.html  settings.html  signin.html  signup.html  tag.html
web/template/base/: base.html  base_menu_side.html  base_navbar_footer.html
web/template/include/: error.html  like.html  qst.html
web/user/: models.py  tests.py  urls.py  views.py
web/user/migrations/: 0001_initial.py
